distribution/k8s-prod/lovemap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: lovemap
  name: lovemap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lovemap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      annotations: {}
      labels:
        app: lovemap
    spec:
      containers:
        - env:
            - name: spring_profiles_active
              value: prod
          image: us-east1-docker.pkg.dev/smackmap/lovemap-docker/lovemap-backend:1.10.0
          imagePullPolicy: Always
          name: lovemap
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /join-us.html
              port: 8090
          resources:
            limits:
              memory: 1G
              cpu: 0.5
            requests:
              memory: 1G
              cpu: 0.5
      restartPolicy: Always
status: {}
