distribution/k8s-prod/lovemap-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lovemap-service
  annotations:
    cloud.google.com/backend-config: '{"default": "lovemap-hc-config"}'
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8090
  selector:
    app: lovemap
  type: NodePort
